[package]
name = "space-invader"
version = "0.1.0"
authors = ["Mia Celeste <mia@miaceleste.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19"
rust-ini = "0.16"
lazy_static = "1.4.0"
rand="0.8.3"